# pymatlib

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.txt  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: compile-paper.yml
apps/: CMakeLists.txt  CodegenHeatEquationWithMaterial.cpp  CodegenHeatEquationWithMaterialCPU.cpp  CodegenHeatEquationWithMaterialGPU.cpp  HeatEquationKernelWithMaterial.py  HeatEquationKernelWithMaterialCPU.py  HeatEquationKernelWithMaterialGPU.py  SS304L_HeatEquationKernelWithMaterial.yaml  SS304L_HeatEquationKernelWithMaterialBM.yaml  array_container_callgraph.py  material_demo_callgraph.py  quick_visualize.py  visualize_all_functions.py  yaml_parser_callgraph.py
apps/BM_results/: 128_with_PML_CPU.ods  128_without_PML_CPU.ods
docs/explanation/: design_philosophy.md  interpolation_methods.md  material_properties.md
docs/how-to/: define_materials.md  energy_temperature_conversion.md
docs/reference/: yaml_schema.md
docs/reference/api/: alloy.md  material.md
docs/tutorials/: first_simulation.md  getting_started.md
examples/: material_properties_demo.py
paper/: paper.bib  paper.md  paper1.md  paper2.md
src/pymatlib/: __init__.py
src/pymatlib/algorithms/: __init__.py  interpolation.py  inversion.py  piecewise.py  piecewise_builder.py  piecewise_inverter.py  regression.py  regression_processor.py
src/pymatlib/core/: __init__.py  alloy.py  assignment_converter.py  data_handler.py  elements.py  exceptions.py  interfaces.py  interpolators.py  material.py  materials.py  models.py  piecewise_inverter.py  property_array_extractor.py  pwlfsympy.py  symbol_registry.py  test_interpolate_double_lookup.py  test_interpolate_functs_perf.py  typedefs.py  yaml_parser.py
src/pymatlib/core/codegen/: interpolation_array_container.py
src/pymatlib/core/cpp/: CMakeLists.txt  TestArrayContainer.py  binary_search_interpolation.cpp  double_lookup_interpolation.cpp  module.cpp  temperature_from_energy_density_array.cpp  temperature_from_energy_density_array.h  temperature_from_energy_density_array_cpp.h  test_interpolation.cpp  test_interpolation.py
src/pymatlib/core/cpp/include/: binary_search_interpolation.h  double_lookup_interpolation.h  interpolate_binary_search_cpp.h  interpolate_double_lookup_cpp.h
src/pymatlib/core/cpp/include/pymatlib_interpolators/: interpolate_binary_search_cpp.h  interpolate_double_lookup_cpp.h
src/pymatlib/core/yaml_parser/: __init__.py  api.py  common_utils.py  config_parser.py  data_handler.py  piecewise_builder.py  property_manager.py  property_processing.py  property_type_detector.py  property_types.py  regression_processor.py  temperature_resolver.py  visualization.py  yaml_keys.py
src/pymatlib/data/: __init__.py  constants.py  element_data.py
src/pymatlib/data/alloys/: Ti6Al4V.py
src/pymatlib/data/alloys/SS304L/: 304L_Erstarrungsdaten_edited.xlsx  Al.yaml  SS304L.py  SS304L.yaml  SS304L_1.yaml  SS304L_comprehensive.yaml  SS304L_comprehensive_1.yaml  SS304L_comprehensive_2.yaml  SS304L_comprehensive_2_copy.yaml  SS304L_pwlf.yaml  density_temperature_edited.txt  pure_metal.yaml  (+1 more)
src/pymatlib/data/constants/: __init__.py  physical_constants.py  processing_constants.py
src/pymatlib/data/elements/: __init__.py  element_data.py
src/pymatlib/data/materials/: __init__.py
src/pymatlib/parsing/: __init__.py  api.py
src/pymatlib/parsing/config/: __init__.py  configuration.py  material_yaml_parser.py  yaml_keys.py
src/pymatlib/parsing/io/: __init__.py  data_handler.py
src/pymatlib/parsing/processors/: __init__.py  dependency_processor.py  material_property_processor.py  post_processor.py  property_handlers.py  property_manager.py  property_processor.py  property_processor_base.py  temperature_resolver.py
src/pymatlib/parsing/utils/: __init__.py  utilities.py
src/pymatlib/parsing/validation/: __init__.py  array_validator.py  custom_error.py  errors.py  property_type_detector.py  property_validator.py  temperature_validator.py  type_detection.py
src/pymatlib/tests/: create_test_files.py  tests.py
src/pymatlib/visualization/: __init__.py  config_images.py  input_types.py  joss_plots.py  pdf_reporter_1.py  pdf_reporter_2.py  pdf_reporter_3.py  pdf_reporter_4.py  plotters.py  property_plots.py
tests/: conftest.py  test_alloy.py  test_assignment_converter.py  test_data_handler.py  test_imports.py  test_interpolators.py  test_models.py  test_typedefs.py  test_validation_functions.py  test_yaml_config.py  tests.py
tests/cpp/: CMakeLists.txt  TestArrayContainer.py  test_interpolation.cpp
tests/examples/: material_properties_demo.py
tests/integration/: test_end_to_end.py  test_imports.py  test_material_creation.py  test_yaml_material_creation.py
tests/legacy/: test_interpolate_functs_perf.py
tests/performance/: test_benchmarks.py
tests/python/: test_alloy.py  test_assignment_converter.py  test_data_handler.py  test_interpolators.py  test_inverse.py  test_inverse_1.py  test_inversion.py  test_models.py  test_typedefs.py  test_yaml_config.py
tests/regression/: test_regression_suits.py
tests/unit/test_algorithms/: test_interpolation.py  test_interpolation_edge_cases.py  test_inverse.py  test_inverse_1.py  test_inversion.py  test_piecewise_builder.py  test_piecewise_inverter_comprehensive.py  test_regression_processor.py
tests/unit/test_core/: test_elements.py  test_materials.py  test_symbol_registry.py
tests/unit/test_data/: test_constants.py  test_element_data.py
tests/unit/test_parsing/: test_api.py  test_data_handler.py  test_dependency_processor.py  test_post_processor.py  test_property_handlers.py  test_property_processor_base.py  test_property_type_detector.py  test_temperature_resolver.py  test_temperature_resolver_edge_cases.py  test_utilities_comprehensive.py  test_yaml_parser.py
tests/unit/test_validation/: test_array_validator.py  test_property_validator.py  test_validation_functions.py
tests/unit/test_visualization/: test_plotters.py  test_plotters_error_handling.py
(+14 files in other folders)
